compiler/fir/analysis-tests/testData/resolveWithStdlib/properties/explicitBackingFieldUnsupported.kt
// LANGUAGE: -ExplicitBackingFields

konst that: Number
    <!UNSUPPORTED_FEATURE!>field = 4<!>
